syntax = "proto3";
import "google/protobuf/wrappers.proto";
option csharp_namespace = "Discount.Grpc";

package discount;

service DiscountProtoService {
	rpc GetDiscount (GetDiscountRequest) returns (CouponModel);
	rpc CreateDiscount (CreateDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest {
	string name = 1;
}

message CouponModel {
	string id = 1;
	string name = 2;
	google.protobuf.StringValue description = 3;
	int32 amount = 4;
	CouponType type = 5;
	string validFrom = 6;
	string validTo = 7;
	bool isActive = 8;
}

message CreateDiscountRequest {
	CouponModel coupon = 1;
}

message UpdateDiscountRequest {
	CouponModel coupon = 1;
}

message DeleteDiscountRequest {
	string roomName = 1;
}

message DeleteDiscountResponse {
	bool success = 1;
}

enum CouponType {
	PERCENTAGE = 0;
	FIXED_AMOUNT = 1;
}
